--- a/public/stylesheets/user-header.css
+++ b/public/stylesheets/user-header.css
@@ -585,7 +585,8 @@ xclip
 #mainNav.navbar-shrink {
     padding-top: 10px;
     padding-bottom: 10px;
-    background-color: #ffffff;
+    /* background-color: #ffffff; */
+    background-color: black;
 }
 
 #clouds{
