--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -2,12 +2,14 @@
  
    
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    {{!-- <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav"> --}}
+     <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
+
       <div class="container-fluid">
         <a class="navbar-brand js-scroll-trigger" href="/user/user-home" >
 			<img class="img-fluid" src="/images/LOGO.png" style="height: 5rem;">
 	  	</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" style="color: white;">
           Menu
           <i class="fa fa-bars"></i>
         </button>
